2007-06-17  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils (g_get_current_dir): Prevent segfaults on
	long paths.  (#447935, Robby Griffin)

2007-06-17  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gdataset.c (g_quark_from_string),
	(g_quark_from_static_string): Accept NULL and return GQuark
	value of zero. (#446859)

2007-06-16  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* glib/gstring.c: Correctly use g_printf_string_upper_bound
	in g_string_append_vprintf. Fixes #447933.

2007-06-15  Sebastian Wilhelmi  <wilhelmi@google.com>

	* docs/reference/glib/tmpl/threads.sgml: Extended the comments on
	those functions, that are NOOPs, before g_thread_init() has been
	called. (#447583)

	* glib/gthread.c (g_static_mutex_free): Clarified comment to
	remind myself, that calling g_static_mutex_free() before
	g_thread_init() is safe.

2007-06-15  Cody Russell  <bratsche@gnome.org>

	* docs/reference/gobject/tmpl/gboxed.sgml:
	* docs/reference/gobject/gobject-sections.txt:
	* glib/gregex.c:
	* gobject/gboxed.[ch]:
	* gobject/gobject.symbols: Added GRegex boxed type.
	(#445065, Carlos Garnacho)

2007-06-15  Sebastian Wilhelmi  <wilhelmi@google.com>

	* glib/gregex.c: Replaced & by &amp; in <programlisting> to make
	gtk-doc happy.

2007-06-14  Ryan Lortie  <desrt@desrt.ca>

	* docs/reference/glib/glib-sections.txt:
	* glib/glib/symbols:
	* glib/gstring.[ch] (g_string_printf_internal): Improve
	performance by removing the use of an intermediate g_malloc'd
	buffer.  Rename to g_string_append_vprintf, document, and expose
	along with g_string_vprintf as new public API (#57693).

2007-06-15  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* build, tests/string-test.c, glib/glib.symbols, 
	glib/gstring.c, glib/gstring.h: Introduce g_string_overwrite(_len)?
	for overwriting parts of strings (#368686, Samuel Cormier-Iijima)

2007-06-14  Cody Russell  <bratsche@gnome.org>

	* gobject/gtype.c (g_type_class_add_private): Check for 0-sized
	private data. (#443869)
