@@ -622,6 +622,7 @@ g_idle_source_new
 g_timeout_add
 g_timeout_add_seconds
 g_timeout_add_full
+g_timeout_add_seconds_full
 g_timeout_source_new
 g_timeout_source_new_seconds
 #endif
